Fixed spacing on smaller screen sizes

--- a/web.css
+++ b/web.css
@@ -10,15 +10,12 @@
     max-width: 100%;
   }
 
+  #welcome-section {
+    height: 100%;
+  }
+
   .project-container {
-    display: grid;
-    grid-template-columns: repeat(minmax(200px, 2fr));
-    justify-content: center;
     gap: 5px;
-    align-items: left;
-    text-align: center;
-    margin: 20px;
-    padding: 20px;
     scale: 75%;
   }
 
@@ -33,17 +30,12 @@
     text-decoration: none;
   }
 
-  .project-link:hover {
-    background-color: var(--color4);
-    color: var(--color2);
-    z-index: -1;
+  #all-projects-link {
+    margin-top: 0;
   }
 
-  .project-link img {
-    width: 50px;
-    height: 50px;
-    border-radius: 10px 10px 0 0;
-    object-fit: cover;
+  .profile-link {
+    scale: 30%;
   }
 }
 
@@ -61,6 +53,14 @@
 
   #welcome-section {
     height: 100%;
+  }
+
+  .profile-link {
+    scale: 30%;
+  }
+
+  #all-projects-link {
+    margin-top: 0;
   }
 }
 
